# Computer_Vision_PDF

./: Converter_Class.py  Module_Database.py  Variables_Extra.py  main.py  pyproject.toml  test.py
