[tool.poetry]
name = "pdf-play-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pillow = "^11.0.0"
pytesseract = "^0.3.13"
tesseract = "^0.1.3"
pypdf2 = "^3.0.1"
reportlab = "^4.2.5"
pdfminer = "^20191125"
poppler-utils = "^0.1.0"
pdfrw = "^0.4"
pdf2image = "^1.17.0"
pymupdf = "^1.24.12"
natsort = "^8.4.0"
wand = "^0.6.13"
pypdf = "^5.0.1"
loguru = "^0.7.2"
numpy = "^2.1.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
